welcome.lessons.welcome.instructions.Instructions.scala.code
(1 to 3) forward()
